# ReservasSalas

./: .gitignore  Cargo.toml  ICED_AUTH_INTEGRATION.md  README.md
.github/workflows/: build-desktop.yml  ci.yml
crates/app/: Cargo.toml
crates/app-cli/: Cargo.toml
crates/app-cli/src/: main.rs
crates/app-desktop/: ANDROID.md  DISTRIBUTION.md  LOGGING.md  README.md  WEB.md
crates/app-desktop-dioxus/: Cargo.toml  Dioxus.toml  README.md  run.sh
crates/app-desktop-dioxus/assets/: style.css
crates/app-desktop-dioxus/src/: calendario.rs  main.rs  models.rs  services.rs
crates/app-desktop-dioxus/src/components/: login.rs  mod.rs  salas.rs
crates/app-desktop-iced/: Cargo.toml  README.md
crates/app-desktop-iced/src/: calendario.rs  main.rs  models.rs  services.rs
crates/app-desktop-slint/: COMPARISON_ALL.md  Cargo.toml  README.md
crates/app-desktop-slint/src/: main.rs
crates/app-desktop-slint/ui/: app.slint
crates/app-desktop-tauri/: ANDROID.md  LOGGING.md  README.md
crates/app-desktop-tauri/src/: index.html  main.js  styles.css
crates/app-desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/app-desktop-tauri/src-tauri/src/: backend.rs  commands.rs  lib.rs  logger.rs  main.rs  models.rs
crates/app-desktop/src/: index.html  main.js  styles.css
crates/app-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/app-desktop/src-tauri/src/: backend.rs  commands.rs  lib.rs  logger.rs
crates/app-tui/: Cargo.toml
crates/app-tui/src/: main.rs
crates/app-web/: Cargo.toml
crates/app-web/src/: routes.rs  templates.rs
crates/app-web/src/handlers/: index.rs  mod.rs  sala.rs
crates/app-web/templates/: base.html  index.html  salas_form.html
crates/app/src/: main.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: repository.rs
crates/core/shared-kernel/: Cargo.toml
crates/core/shared-kernel/src/: lib.rs  slot.rs
crates/features/reservas/application/: Cargo.toml
crates/features/reservas/application/src/: lib.rs  repository.rs  service.rs
crates/features/reservas/domain/: Cargo.toml
crates/features/reservas/domain/src/: error.rs  lib.rs  reserva.rs
crates/features/reservas/grpc/: Cargo.toml  build.rs
crates/features/reservas/grpc/proto/: reserva.proto
crates/features/reservas/grpc/src/: auth.rs  lib.rs  server.rs
crates/features/reservas/infrastructure/: Cargo.toml
crates/features/reservas/infrastructure/src/: file_repository.rs  inmemory_repository.rs  lib.rs
crates/features/salas/api/: Cargo.toml
crates/features/salas/api/src/: auth.rs  dtos.rs  handlers.rs  lib.rs  mapper.rs  openapi.rs  routes.rs
crates/features/salas/application/: Cargo.toml
crates/features/salas/application/src/: lib.rs  ports.rs  service.rs
crates/features/salas/domain/: Cargo.toml
crates/features/salas/domain/src/: error.rs  lib.rs  sala.rs
crates/features/salas/grpc/: Cargo.toml  README.md  build.rs
crates/features/salas/grpc/proto/: sala.proto
crates/features/salas/grpc/src/: auth.rs  lib.rs  server.rs
crates/features/salas/infrastructure/: Cargo.toml  README.md
crates/features/salas/infrastructure/src/: file_repository.rs  lib.rs  repository.rs
crates/features/salas/validation/: ARQUITECTURA.md  BACKEND_INTEGRATION.md  Cargo.toml  EJEMPLOS.md  README.md  REST_INTEGRATION.md
crates/features/salas/validation/src/: error.rs  lib.rs  sala.rs
crates/features/usuarios/: README.md
crates/features/usuarios/application/: Cargo.toml
crates/features/usuarios/application/src/: auth_service.rs  lib.rs  repository.rs  usuario_service.rs
crates/features/usuarios/auth/: Cargo.toml
crates/features/usuarios/auth/src/: jwt.rs  password.rs
crates/features/usuarios/domain/: Cargo.toml
crates/features/usuarios/domain/src/: error.rs  lib.rs  rol.rs  usuario.rs
crates/features/usuarios/grpc/: Cargo.toml  build.rs
crates/features/usuarios/grpc/proto/: usuario.proto
crates/features/usuarios/grpc/src/: auth.rs  lib.rs  server.rs
crates/features/usuarios/infrastructure/: Cargo.toml
crates/features/usuarios/infrastructure/src/: file_repository.rs  lib.rs
data/: reservas.json  salas.json  usuarios.json
docs/: API.md  QUICK_START.md  README.md  ROADMAP_DETALLADO.md
docs/apps/: COMPARISON.md  DISTRIBUTION.md  WEB.md
docs/historico/: EJEMPLO_ICED.md  FASE_0_USUARIOS_AUTH.md  GRPC_INTEGRATION_COMPLETE.md  INTEGRACION_FILE_REPO.md  INTEGRATION_COMPLETE.md  USUARIOS_QUICK_START.md  USUARIOS_SUMMARY.md  USUARIOS_SYSTEM_CREATED.md
