[workspace]
members = [
    "crates/app",
    "crates/app-cli",
    "crates/app-desktop-tauri/src-tauri",
    "crates/app-desktop-dioxus",
    "crates/app-desktop-slint",
    "crates/app-desktop-iced",
    "crates/app-tui",
    "crates/app-web",
    "crates/features/salas/domain",
    "crates/features/salas/application",
    "crates/features/salas/infrastructure",
    "crates/features/salas/api",
    "crates/features/salas/grpc",
    "crates/features/usuarios/domain",
    "crates/features/usuarios/auth",
    "crates/features/usuarios/application",
    "crates/features/usuarios/infrastructure",
    "crates/features/usuarios/grpc",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
askama = "0.12"
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
tauri = "2.1"
tauri-build = "2.0"

[profile.release]
opt-level = "z"        # "z" = optimizar para tamaño (más agresivo que "s")
lto = true             # link-time optimization, reduce tamaño y mejora rendimiento
codegen-units = 1      # menos paralelismo al compilar, pero mejor optimización
panic = "abort"        # no genera info para unwinding del panic -> menos código
strip = "symbols"      # quita símbolos (si tu versión de Rust lo soporta)
debug = false          # sin info de debug en release
