[workspace]
members = [
    "crates/app",
    "crates/app-cli",
    "crates/app-desktop-tauri/src-tauri",
    "crates/app-desktop-dioxus",
    "crates/app-desktop-slint",
    "crates/app-desktop-iced",
    "crates/app-tui",
    "crates/app-web",
    "crates/features/salas/domain",
    "crates/features/salas/application",
    "crates/features/salas/infrastructure",
    "crates/features/salas/api",
    "crates/features/salas/grpc",
    "crates/features/usuarios/domain",
    "crates/features/usuarios/auth",
    "crates/features/usuarios/application",
    "crates/features/usuarios/infrastructure",
    "crates/features/usuarios/grpc",
]
resolver = "2"

[workspace.dependencies]
askama = "0.14.0"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = "0.4.42"
prost = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2.1"
tauri-build = "2.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "cors", "fs"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"        # "z" = optimizar para tamaño (más agresivo que "s")
lto = true             # link-time optimization, reduce tamaño y mejora rendimiento
codegen-units = 1      # menos paralelismo al compilar, pero mejor optimización
panic = "abort"        # no genera info para unwinding del panic -> menos código
strip = "symbols"      # quita símbolos (si tu versión de Rust lo soporta)
debug = false          # sin info de debug en release
