[workspace]
members = [
    "crates/app",
    "crates/app-cli",
    "crates/app-desktop-dioxus",
    "crates/app-desktop-iced",
    "crates/app-desktop-slint",
    "crates/app-desktop-tauri/src-tauri",
    "crates/app-tui",
    "crates/app-web",
    "crates/features/salas/api",
    "crates/features/salas/application",
    "crates/features/salas/domain",
    "crates/features/salas/grpc",
    "crates/features/salas/infrastructure",
    "crates/features/usuarios/application",
    "crates/features/usuarios/auth",
    "crates/features/usuarios/domain",
    "crates/features/usuarios/grpc",
    "crates/features/usuarios/infrastructure",
    "crates/features/reservas/domain",
    "crates/features/reservas/application",
    "crates/features/reservas/infrastructure",
    "crates/features/reservas/grpc",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
askama = "0.14.0"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = "0.4.42"
clap = "4.5.53"
colored = "3.0.0"
crossterm = "0.29.0"
dioxus = { version = "0.7.1", features = ["desktop"] }
dioxus-logger = "0.7.1"
http = "1.4.0"
iced = "0.13.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }# JWT
lazy_static = "1.5.0"
notify-rust = "4.11.7"
once_cell = "1.21.3"
prost = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.14.1", default-features = false }
tauri = "2.9.4"
tauri-build = "2.5.3"
tauri-plugin-opener = "2.5.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "cors", "fs"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = "0.20.0"

[profile.release]
opt-level = "z"        # "z" = optimizar para tamaño (más agresivo que "s")
lto = true             # link-time optimization, reduce tamaño y mejora rendimiento
codegen-units = 1      # menos paralelismo al compilar, pero mejor optimización
panic = "abort"        # no genera info para unwinding del panic -> menos código
strip = "symbols"      # quita símbolos (si tu versión de Rust lo soporta)
debug = false          # sin info de debug en release
