[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

# gRPC Client
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic = { workspace = true }

# Terminal output
colored = "3.0.0"

# Error handling
anyhow = "1.0.100"

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
