[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-cli"
path = "src/main.rs"

[dependencies]
clap = {  workspace = true, features = ["derive"] }

# gRPC Client
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic = { workspace = true }

# Terminal output
colored = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
