[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = {  workspace = true, features = ["derive"] }
colored = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
