[package]
name = "app-desktop-dioxus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-desktop-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-logger = "0.5"
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
