[package]
name = "app-desktop-dioxus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-desktop-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
dioxus-logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
chrono = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
reservas-grpc = { path = "../features/reservas/grpc" }
