[package]
name = "app-desktop-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tonic = "0.12"
tokio = { version = "1", features = ["full"] }

# Usar el crate gRPC local
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
once_cell = "1.21.3"
notify-rust = "4"

[[bin]]
name = "app-desktop-iced"
path = "src/main.rs"
