[package]
name = "app-desktop-iced"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-desktop-iced"
path = "src/main.rs"

[dependencies]
iced = { workspace = true, features = ["tokio"] }
notify-rust = { workspace = true }
once_cell = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

# Usar el crate gRPC local
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
