[package]
name = "app-desktop-slint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-desktop-slint"
path = "src/main.rs"

[dependencies]
slint = { version = "1.9", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.9"
