[package]
name = "app-desktop-slint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-desktop-slint"
path = "src/main.rs"

[dependencies]
slint = { version = "1.9", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tonic = "0.12"
lazy_static = "1.4"

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }

[build-dependencies]
slint-build = "1.9"
