[package]
name = "app-desktop-slint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-desktop-slint"
path = "src/main.rs"

[dependencies]
lazy_static = { workspace = true }
slint = { workspace = true, default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }

[build-dependencies]
slint-build = "1.9"
