[package]
name = "app-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
tonic = "0.12"
prost = "0.13"

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
