[package]
name = "app-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
