[package]
name = "app-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-tui"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# Dependencias locales
salas-grpc = { path = "../features/salas/grpc" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
