[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web
axum = { workspace = true }
tower-http = { workspace = true }

# Templates HTML
askama = { workspace = true }

# Internal crates
salas-domain = { path = "../features/salas/domain" }
salas-application = { path = "../features/salas/application" }
salas-infrastructure = { path = "../features/salas/infrastructure" }
salas-api = { path = "../features/salas/api" }

# Serialización para formularios
serde = { version = "1.0", features = ["derive"] }

# Manejo de fechas
chrono = { workspace = true, features = ["serde"] }