[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web
axum = { workspace = true }
tower-http = { workspace = true }

# Templates HTML
askama = { workspace = true }

# Internal crates
salas-application = { path = "../features/salas/application" }

# Serialización para formularios
serde = { version = "1.0", features = ["derive"] }
