[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web
askama = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tower-http = { workspace = true }

salas-application = { path = "../features/salas/application" }
