[package]
name = "reservas-salas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }

# Internal crates - Salas
salas-application = { path = "../features/salas/application" }
salas-infrastructure = { path = "../features/salas/infrastructure" }
salas-api = { path = "../features/salas/api" }
salas-grpc = { path = "../features/salas/grpc" }

# Internal crates - Usuarios
usuarios-domain = { path = "../features/usuarios/domain" }
usuarios-application = { path = "../features/usuarios/application" }
usuarios-infrastructure = { path = "../features/usuarios/infrastructure" }
usuarios-grpc = { path = "../features/usuarios/grpc" }

# Web
app-web = { path = "../app-web" }
