[package]
name = "reservas-salas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal crates - Salas
salas-api = { path = "../features/salas/api" }
salas-application = { path = "../features/salas/application" }
salas-grpc = { path = "../features/salas/grpc" }
salas-infrastructure = { path = "../features/salas/infrastructure" }

# Internal crates - Usuarios
usuarios-application = { path = "../features/usuarios/application" }
usuarios-domain = { path = "../features/usuarios/domain" }
usuarios-grpc = { path = "../features/usuarios/grpc" }
usuarios-infrastructure = { path = "../features/usuarios/infrastructure" }

# Internal crates - Reservas
reservas-application = { path = "../features/reservas/application" }
reservas-grpc = { path = "../features/reservas/grpc" }
reservas-infrastructure = { path = "../features/reservas/infrastructure" }

# Web
app-web = { path = "../app-web" }
