[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-opener = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { workspace = true }
tonic = { workspace = true }
usuarios-grpc = { path = "../../features/usuarios/grpc" }
