[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-opener = { workspace = true }
tonic = { workspace = true }
usuarios-grpc = { path = "../../features/usuarios/grpc" }
