[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-opener = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Internal crates
salas-domain = { path = "../../features/salas/domain" }
salas-application = { path = "../../features/salas/application" }
salas-infrastructure = { path = "../../features/salas/infrastructure" }
