[package]
name = "reservas-application"
version = "0.1.0"
edition = "2021"

[dependencies]
reservas-domain = { path = "../domain" }
salas-application = { path = "../../salas/application" }
usuarios-application = { path = "../../usuarios/application" }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
salas-domain = { path = "../../salas/domain" }
usuarios-domain = { path = "../../usuarios/domain" }
tokio = { workspace = true, features = ["full"] }
