[package]
name = "reservas-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
reservas-domain = { path = "../domain" }
reservas-application = { path = "../application" }

tonic = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true}
