[package]
name = "reservas-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
reservas-domain = { path = "../domain" }
reservas-application = { path = "../application" }

async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
