[package]
name = "salas-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Capas de tu feature
salas-domain = { path = "../domain" }
salas-application = { path = "../application" }

# Serialización (DTOs)
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Framework web
axum = { workspace = true , features = ["macros"] }

# Manejo de errores HTTP
http = "1.0"

# Logging (opcional pero recomendado)
tracing = { workspace = true }

# OpenAPI / Swagger
utoipa = { version = "5.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Autenticación
usuarios-auth = { path = "../../usuarios/auth" }
usuarios-domain = { path = "../../usuarios/domain" }
