[package]
name = "salas-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true , features = ["macros"] }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# Autenticación
usuarios-auth = { path = "../../usuarios/auth" }
usuarios-domain = { path = "../../usuarios/domain" }
salas-domain = { path = "../domain" }
salas-application = { path = "../application" }
