[package]
name = "salas-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
salas-application = { path = "../application" }
salas-domain = { path = "../domain" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
