[package]
name = "salas-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
salas-application = { path = "../application" }
salas-domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"