[package]
name = "usuarios-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
usuarios-domain = { path = "../domain" }

# JWT
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"
rand = "0.8"

# Error handling
thiserror = "1.0"
