[package]
name = "usuarios-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
usuarios-domain = { path = "../domain" }

# JWT
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }

# Password hashing
argon2 = { workspace = true }
