[package]
name = "usuarios-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
usuarios-domain = { path = "../domain" }

chrono = { workspace = true, features = ["serde"] }
# JWT
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Password hashing
argon2 = { workspace = true }
rand_core = { workspace = true }
