[package]
name = "usuarios-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
usuarios-domain = { path = "../domain" }
usuarios-application = { path = "../application" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
usuarios-auth = { path = "../auth" }
